# rufl

./: CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  LICENSE  README.md  README_zh-CN.md
.github/workflows/: ci.yml  coverage.yml  rust.yml
src/: lib.rs
src/collection/: all_match.rs  chunk.rs  count.rs  count_by.rs  difference.rs  difference_by.rs  difference_with.rs  fill.rs  filter.rs  filter_map.rs  find.rs  find_last.rs  index_of.rs  insert_at.rs  intersection.rs  is_ascending_order.rs  is_descending_order.rs  is_sorted.rs  last_index_of.rs  map.rs  max.rs  min.rs  mod.rs  none_match.rs  partition.rs  reduce.rs  reduce_right.rs  remove_all.rs  repalce_all.rs  repalce_n.rs  shuffle.rs  some_match.rs  union.rs  union_by.rs  unique.rs  unique_by.rs
src/eventbus/: event.rs  event_bus.rs  mod.rs  subscriber.rs
src/file/: clear.rs  copy_dirs.rs  create.rs  create_file.rs  file_names.rs  get_md5.rs  is_symlink.rs  mod.rs  read_to_buffer.rs  read_to_lines.rs  read_to_string.rs  write_to.rs
src/math/: abs.rs  average.rs  factorial.rs  fib_nth.rs  fib_seq.rs  fib_sum.rs  float.rs  gcd.rs  harmonic.rs  integer.rs  is_prime.rs  lcm.rs  mod.rs  number.rs  percent.rs  round.rs  round_down.rs  round_up.rs  sqrt.rs  sum.rs  to_angle.rs  to_radian.rs  truncate.rs
src/random/: alpha_number.rs  alphabet.rs  alphabeta.rs  generate.rs  lower.rs  mod.rs  numberic.rs  numberic_str.rs  rand.rs  string.rs  symbol.rs  upper.rs
src/string/: add_commas.rs  after.rs  after_last.rs  before.rs  before_last.rs  camel_case.rs  capitalize.rs  count_by.rs  count_chars.rs  cut.rs  (+38 more)
