[package]
name = "ruf"
version = "0.1.1"
authors = ["dudaodong@gmail.com"]
edition = "2021"
description = "A powerful util function library for rust"
license = "MIT"
repository = "https://github.com/duke-git/ruf"
keywords = ["rust", "util", "lib", "function", "common"]
categories = ["utils"]

[dependencies]
fastrand = "2.0.1"
lazy_static = "1.4.0"
regex = "1.10.2"
unicode-segmentation = "1.10.1"
md-5 = "0.10.6"

[features]
default = ["collection", "eventbus", "file", "math", "random", "string"]
collection = []
eventbus = []
file = []
math = []
random = []
string = []
